Adjust background and add wallpaper

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>Page Not Found</title>
     <style>
         body {
-            background: linear-gradient(to right, #4d27b6 0%, #000000 20%, #000000 80%, #4d27b6 100%);
+            background-color: #000000;
             color: white;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
