adjust website style

--- a/en/index.html
+++ b/en/index.html
@@ -17,16 +17,31 @@
     </div>
 
     <div class="page-container">
-        <img src="../images/capybara.png" alt="Santana Lab Logo" class="logo">
+        <img src="../images/lud.png" alt="Santana Lab Capybara" class="logo">
 
-        <div class="links">
-            <a href="https://youtube.com" target="_blank">Santana Lab on YouTube</a>
-            <a href="#">Coming Soon!</a>
-        </div>
-
-        <div class="footer">
+        <div class="social-icons">
             <a href="https://youtube.com" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
+            </a>
+            <a href="mailto:contact@santanalab.com">
+                <img src="../images/mail-icon-white.svg" alt="Email">
+            </a>
+        </div>
+
+        <div class="section-title">Security and Tech</div>
+
+        <div class="links">
+            <a href="https://youtube.com" target="_blank">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>Santana Lab on YouTube</span>
+            </a>
+            <a href="#">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>Coming Soon!</span>
+            </a>
+            <a href="mailto:contact@santanalab.com">
+                <img src="../images/mail-icon-white.svg" alt="Email">
+                <span>Partnership enquiries</span>
             </a>
         </div>
     </div>
