--- a/pt/index.html
+++ b/pt/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Santana Lab - Links</title>
+    <title>Santana Lab</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -17,16 +17,31 @@
     </div>
 
     <div class="page-container">
-        <img src="../images/capybara.png" alt="Logo do Santana Lab" class="logo">
+        <img src="../images/lud.png" alt="Capivara do Santana Lab" class="logo">
 
-        <div class="links">
-            <a href="https://youtube.com" target="_blank">Santana Lab no YouTube</a>
-            <a href="#">Fique Ligado!</a>
-        </div>
-
-        <div class="footer">
+        <div class="social-icons">
             <a href="https://youtube.com" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
+            </a>
+            <a href="mailto:contato@santanalab.com">
+                <img src="../images/mail-icon-white.svg" alt="Email">
+            </a>
+        </div>
+
+        <div class="section-title">Segurança e Tecnologia</div>
+
+        <div class="links">
+            <a href="https://youtube.com" target="_blank">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>Santana Lab no YouTube</span>
+            </a>
+            <a href="#">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>Fique Ligado!</span>
+            </a>
+            <a href="mailto:contato@santanalab.com">
+                <img src="../images/mail-icon-white.svg" alt="Email">
+                <span>Parcerias e contatos</span>
             </a>
         </div>
     </div>
