update with youtube links and new videos

--- a/en/index.html
+++ b/en/index.html
@@ -20,7 +20,7 @@
         <img src="../images/lud.png" alt="Santana Lab Capybara" class="logo">
 
         <div class="social-icons">
-            <a href="https://youtube.com" target="_blank">
+            <a href="https://www.youtube.com/@TheSantanaLab" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
             </a>
             <a href="mailto:contact@santanalab.com">
@@ -31,13 +31,17 @@
         <div class="section-title">Security and Tech</div>
 
         <div class="links">
-            <a href="https://youtube.com" target="_blank">
+            <a href="https://www.youtube.com/@TheSantanaLab" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab on YouTube</span>
             </a>
-            <a href="#">
+            <a href="https://youtu.be/NMzerH4m2UI target="_blank"">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>Coming Soon!</span>
+                <span>Must-Do Kali Linux Setup: Configure Before You Start!</span>
+            </a>
+            <a href="https://youtu.be/7YvW0_K26Wc target="_blank"">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>How to Install Kali Linux 2025.1 in VirtualBox on Linux (Step-by-Step Guide)</span>
             </a>
             <a href="mailto:contact@santanalab.com">
                 <img src="../images/mail-icon-white.svg" alt="Email">
