--- a/pt/index.html
+++ b/pt/index.html
@@ -20,7 +20,7 @@
         <img src="../images/lud.png" alt="Capivara do Santana Lab" class="logo">
 
         <div class="social-icons">
-            <a href="https://youtube.com" target="_blank">
+            <a href="https://www.youtube.com/@SantanaLabBR" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
             </a>
             <a href="mailto:contato@santanalab.com">
@@ -31,13 +31,17 @@
         <div class="section-title">Segurança e Tecnologia</div>
 
         <div class="links">
-            <a href="https://youtube.com" target="_blank">
+            <a href="https://www.youtube.com/@SantanaLabBR" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab no YouTube</span>
             </a>
-            <a href="#">
+            <a href="https://youtu.be/GuyJDMk9iGU target="_blank"">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>Fique Ligado!</span>
+                <span>Kali Linux: Configurações Essenciais Antes de Começar a Usar!</span>
+            </a>
+            <a href="https://youtu.be/Vwe2fl8s7Fg target="_blank"">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>Como Instalar o Kali Linux 2025.1 no VirtualBox no Linux [Fácil e Rápido]</span>
             </a>
             <a href="mailto:contato@santanalab.com">
                 <img src="../images/mail-icon-white.svg" alt="Email">
