--- a/en/index.html
+++ b/en/index.html
@@ -35,11 +35,11 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab on YouTube</span>
             </a>
-            <a href="https://youtu.be/NMzerH4m2UI target="_blank"">
+            <a href="https://youtu.be/NMzerH4m2UI" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Must-Do Kali Linux Setup: Configure Before You Start!</span>
             </a>
-            <a href="https://youtu.be/7YvW0_K26Wc target="_blank"">
+            <a href="https://youtu.be/7YvW0_K26Wc" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>How to Install Kali Linux 2025.1 in VirtualBox on Linux (Step-by-Step Guide)</span>
             </a>
