--- a/pt/index.html
+++ b/pt/index.html
@@ -35,11 +35,11 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab no YouTube</span>
             </a>
-            <a href="https://youtu.be/GuyJDMk9iGU target="_blank"">
+            <a href="https://youtu.be/GuyJDMk9iGU" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Kali Linux: Configurações Essenciais Antes de Começar a Usar!</span>
             </a>
-            <a href="https://youtu.be/Vwe2fl8s7Fg target="_blank"">
+            <a href="https://youtu.be/Vwe2fl8s7Fg" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Como Instalar o Kali Linux 2025.1 no VirtualBox no Linux [Fácil e Rápido]</span>
             </a>
