add en hacker lab video

--- a/en/index.html
+++ b/en/index.html
@@ -35,6 +35,10 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab on YouTube</span>
             </a>
+            <a href="https://youtu.be/8tt5DDSBz6w" target="_blank">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>How to Build a Hacker Lab with Kali + OWASP Juice Shop</span>
+            </a>
             <a href="https://youtu.be/NMzerH4m2UI" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Must-Do Kali Linux Setup: Configure Before You Start!</span>
