add pt hacker lab video

--- a/pt/index.html
+++ b/pt/index.html
@@ -35,6 +35,10 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab no YouTube</span>
             </a>
+            <a href="https://youtu.be/5JERq3DI7_w" target="_blank">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>Como Criar seu Próprio Laboratório Hacker com Kali + OWASP Juice Shop</span>
+            </a>
             <a href="https://youtu.be/GuyJDMk9iGU" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Kali Linux: Configurações Essenciais Antes de Começar a Usar!</span>
