--- a/en/index.html
+++ b/en/index.html
@@ -31,7 +31,7 @@
         <div class="section-title">Security and Tech</div>
 
         <div class="links">
-            <a href="https://www.youtube.com/@TheSantanaLab" target="_blank">
+            <a href="https://www.youtube.com/channel/UCE5qt_cjmsRfBPW9WHy5y7g?sub_confirmation=1" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab on YouTube</span>
             </a>
