--- a/pt/index.html
+++ b/pt/index.html
@@ -31,7 +31,7 @@
         <div class="section-title">Segurança e Tecnologia</div>
 
         <div class="links">
-            <a href="https://www.youtube.com/@SantanaLabBR" target="_blank">
+            <a href="https://www.youtube.com/channel/UCg1FKTrFxpjxzGPHpNAfrBA?sub_confirmation=1" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab no YouTube</span>
             </a>
