--- a/en/index.html
+++ b/en/index.html
@@ -35,17 +35,17 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab on YouTube</span>
             </a>
-            <a href="https://youtu.be/8tt5DDSBz6w" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzAXdMthl46T3NSKhi2ONH2b" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>How to Build a Hacker Lab with Kali + OWASP Juice Shop</span>
+                <span>Ethical Hacking & Pentesting Tutorials</span>
             </a>
-            <a href="https://youtu.be/NMzerH4m2UI" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzAYTpO0Nd-WHdtvuCh6pA7b" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>Must-Do Kali Linux Setup: Configure Before You Start!</span>
+                <span>Kali Linux Tutorials: Setup, Tools & Privacy</span>
             </a>
-            <a href="https://youtu.be/7YvW0_K26Wc" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzDv9rXxFsJGZ2ZtkdMFOeyY" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>How to Install Kali Linux 2025.1 in VirtualBox on Linux (Step-by-Step Guide)</span>
+                <span>OWASP Juice Shop Exploits: Learn Web Hacking Safely</span>
             </a>
             <a href="mailto:contact@santanalab.com">
                 <img src="../images/mail-icon-white.svg" alt="Email">
