--- a/pt/index.html
+++ b/pt/index.html
@@ -35,17 +35,17 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Santana Lab no YouTube</span>
             </a>
-            <a href="https://youtu.be/5JERq3DI7_w" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzP-KnTAdkRF5sNz5np_CYiq" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>Como Criar seu Próprio Laboratório Hacker com Kali + OWASP Juice Shop</span>
+                <span>Hacking Ético e Pentest: Tutoriais Práticos</span>
             </a>
-            <a href="https://youtu.be/GuyJDMk9iGU" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzPDQvY_1qk_bPC-svr0qHBj" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>Kali Linux: Configurações Essenciais Antes de Começar a Usar!</span>
+                <span>Kali Linux: Instalação, Ferramentas e Privacidade</span>
             </a>
-            <a href="https://youtu.be/Vwe2fl8s7Fg" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzN8dRkS_m91htvJXVorhoa5" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
-                <span>Como Instalar o Kali Linux 2025.1 no VirtualBox no Linux [Fácil e Rápido]</span>
+                <span>OWASP Juice Shop: Aprenda Hacking Ético na Prática</span>
             </a>
             <a href="mailto:contato@santanalab.com">
                 <img src="../images/mail-icon-white.svg" alt="Email">
