add osint lists

--- a/en/index.html
+++ b/en/index.html
@@ -39,6 +39,10 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Ethical Hacking & Pentesting Tutorials</span>
             </a>
+            <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzCRLuVvKlLz7Kjpha8tTu-B" target="_blank">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>OSINT: Open Source Intelligence</span>
+            </a>
             <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzAYTpO0Nd-WHdtvuCh6pA7b" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Kali Linux Tutorials: Setup, Tools & Privacy</span>
