--- a/pt/index.html
+++ b/pt/index.html
@@ -39,6 +39,10 @@
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Hacking Ético e Pentest: Tutoriais Práticos</span>
             </a>
+            <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzPi17JimXm--OFaVNBqo4x8" target="_blank">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <span>OSINT: Inteligência de Fonte Aberta</span>
+            </a>
             <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzPDQvY_1qk_bPC-svr0qHBj" target="_blank">
                 <img src="../images/youtube-icon-white.svg" alt="YouTube">
                 <span>Kali Linux: Instalação, Ferramentas e Privacidade</span>
