--- a/en/index.html
+++ b/en/index.html
@@ -32,28 +32,48 @@
 
         <div class="links">
             <a href="https://www.youtube.com/channel/UCE5qt_cjmsRfBPW9WHy5y7g?sub_confirmation=1" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube Channel">
                 <span>Santana Lab on YouTube</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzAXdMthl46T3NSKhi2ONH2b" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube Ethical Hacking & Pentesting Tutorials">
                 <span>Ethical Hacking & Pentesting Tutorials</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzCRLuVvKlLz7Kjpha8tTu-B" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube OSINT">
                 <span>OSINT: Open Source Intelligence</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzAYTpO0Nd-WHdtvuCh6pA7b" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube Kali Linux Tutorials">
                 <span>Kali Linux Tutorials: Setup, Tools & Privacy</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PLRkQOyZXgHzDv9rXxFsJGZ2ZtkdMFOeyY" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube OWASP Juice Shop Exploits">
                 <span>OWASP Juice Shop Exploits: Learn Web Hacking Safely</span>
             </a>
             <a href="mailto:contact@santanalab.com">
                 <img src="../images/mail-icon-white.svg" alt="Email">
                 <span>Partnership enquiries</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g6" target="_blank">
+                <img src="../images/VPN-logomark-noborder.svg" alt="Proton VPN">
+                <span>Proton VPN: The best VPN for speed and security <br> Up to 64% OFF</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g5" target="_blank">
+                <img src="../images/Proton-logomark-purple-noborder.svg" alt="Proton Unlimited">
+                <span>Proton services plans <br> Up to 25% OFF</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g5" target="_blank">
+                <img src="../images/Mail-logomark-noborder.svg" alt="Proton Mail">
+                <span>Proton Mail: Secure email that protects your privacy</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g2" target="_blank">
+                <img src="../images/Pass-logomark-noborder.svg" alt="Proton Pass">
+                <span>Proton Pass: Password manager with identity protection <br> Up to 50% OFF</span>
+            </a>
+            <a href="https://go.getproton.me/SH1gD" target="_blank">
+                <img src="../images/Drive-logomark-noborder.svg" alt="Proton Drive">
+                <span>Proton Drive: Keep your files safe and private</span>
             </a>
         </div>
     </div>
