--- a/pt/index.html
+++ b/pt/index.html
@@ -32,28 +32,48 @@
 
         <div class="links">
             <a href="https://www.youtube.com/channel/UCg1FKTrFxpjxzGPHpNAfrBA?sub_confirmation=1" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="Canal YouTube">
                 <span>Santana Lab no YouTube</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzP-KnTAdkRF5sNz5np_CYiq" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube Hacking Ético e Pentest">
                 <span>Hacking Ético e Pentest: Tutoriais Práticos</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzPi17JimXm--OFaVNBqo4x8" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube OSINT">
                 <span>OSINT: Inteligência de Fonte Aberta</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzPDQvY_1qk_bPC-svr0qHBj" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube Kali Linux">
                 <span>Kali Linux: Instalação, Ferramentas e Privacidade</span>
             </a>
             <a href="https://www.youtube.com/playlist?list=PL5Wn3vchgFzN8dRkS_m91htvJXVorhoa5" target="_blank">
-                <img src="../images/youtube-icon-white.svg" alt="YouTube">
+                <img src="../images/youtube-icon-white.svg" alt="YouTube OWASP Juice Shop">
                 <span>OWASP Juice Shop: Aprenda Hacking Ético na Prática</span>
             </a>
             <a href="mailto:contato@santanalab.com">
                 <img src="../images/mail-icon-white.svg" alt="Email">
                 <span>Parcerias e contatos</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g6" target="_blank">
+                <img src="../images/VPN-logomark-noborder.svg" alt="Proton VPN">
+                <span>Proton VPN: A melhor VPN para velocidade e segurança <br> Até 64% OFF</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g5" target="_blank">
+                <img src="../images/Proton-logomark-purple-noborder.svg" alt="Proton Unlimited">
+                <span>Pacotes de serviços Proton <br> Até 25% OFF</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g5" target="_blank">
+                <img src="../images/Mail-logomark-noborder.svg" alt="Proton Mail">
+                <span>Proton Mail: E-mail seguro que protege sua privacidade</span>
+            </a>
+            <a href="https://go.getproton.me/SH1g2" target="_blank">
+                <img src="../images/Pass-logomark-noborder.svg" alt="Proton Pass">
+                <span>Proton Pass: Gerenciador de senhas com proteção de identidade <br> Até 50% OFF</span>
+            </a>
+            <a href="https://go.getproton.me/SH1gD" target="_blank">
+                <img src="../images/Drive-logomark-noborder.svg" alt="Proton Drive">
+                <span>Proton Drive: Mantenha seus arquivos seguros e privados</span>
             </a>
         </div>
     </div>
